# aoc_hri_ros2_pkg

./: README.md
.devcontainer/: Dockerfile  docker-compose.yml  user_install.dockerfile
.devcontainer/cuda-opengl/: devcontainer.json
.devcontainer/default/: devcontainer.json
.devcontainer/docker_include/: apt_install.dockerfile  user_install.dockerfile
.devcontainer/scripts/: install_exterenal_repos.sh  install_external_ros_packages.sh  post-create.sh
.github/workflows/: dev-container.yml  ros-ci.yml
detectors/camera-lidar/: CMakeLists.txt  setup.py
detectors/camera-lidar/config/: camera_with_lidar_cloud.yaml
detectors/camera-lidar/launch/: marker_to_lidar.launch.py  tracker_with_cloud_node.launch.py
detectors/camera-lidar/script/: marker_to_lidar.py
detectors/lidar/: CMakeLists.txt  package.xml
detectors/lidar/config/: mmdet3d_pointpillars_config.yaml
detectors/lidar/script/: pointcloud_detect.py  test.py
detectors/rgbd_camera/: CMakeLists.txt  README.md  package.xml
detectors/rgbd_camera/config/: back_camera_dogtooth.yaml  back_camera_hunter.yaml  front_camera_dogtooth.yaml  front_camera_hunter.yaml  marker_pub_params.yaml
detectors/rgbd_camera/launch/: back_camera_with_depth.launch.xml  bounding_box_publisher.launch.py  detection_rgbd.launch.xml  front_camera_with_depth.launch.xml  launch_multi_zed_detection.py  multiple_camera_launch.xml  tracker_depth_skeleton.launch.xml
detectors/rgbd_camera/msg/: HumanInfo.msg  HumanInfoArray.msg
detectors/rgbd_camera/script/: detection_rgbd.py  get_zed_parameters.py  tracker_depth_duo_im.py  tracker_depth_skeleton.py
src/: README.md
src/detectors/camera-lidar/: package.xml
src/detectors/camera-lidar/script/: detect_with_lidar_cloud.py
src/detectors/lidar/launch/: lidar_detect.launch.py
src/detectors/rgbd_camera/config/: two_cameras_dogtooth.yaml  two_cameras_hunter.yaml
src/detectors/rgbd_camera/launch/: launch_multi_zed_detection_duo_im.launch.py  multi_bounding_box_pulisher.launch.py  tracker_depth.launch.xml
src/detectors/rgbd_camera/msg/: DistanceArray.msg
src/detectors/rgbd_camera/script/: tracker_depth.py  tracker_depth_duo_im_copy.py
src/trackers/human_tracker_uol/trackers/: tracker_KMFilter.py
src/trackers/launch/: bounding_box_publisher.launch.py
trackers/: CMakeLists.txt  package.xml  setup.py
trackers/config/: marker_pub_params.yaml  marker_pub_params_back.yaml  marker_pub_params_front.yaml
trackers/human_tracker_uol/: __init__.py  marker_publisher.py
